--- a/vektor.vcxproj
+++ b/vektor.vcxproj
@@ -130,7 +130,7 @@
     <ClInclude Include="Vektor.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Vektor.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
